Migrating to mariadb from sqlite3
Also renamed wages to wage. Put DB credentials in file.

--- a/app/templates/no_react.html
+++ b/app/templates/no_react.html
@@ -88,7 +88,7 @@
               {{ item.title }}
             </td>
             <td>
-              {{ "${:.2f}".format(item.wages) }}
+              {{ "${:,.2f}".format(item.wage) }}
             </td>
             <td>
               {{ item.year }}
